Implemented Cassandra and Spark actions and cleaned up code.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -351,3 +351,9 @@ db {
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
   #default.logSql=true
 }
+cassandra{
+  uri = "cassandra://127.0.0.1:9042/tweets"
+}
+tweets{
+  max=100
+}
